deploy/k8s/base/scaling-shared/bootstrap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bootstrap
  name: bootstrap
  namespace: bootstrap-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bootstrap
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  template:
    metadata:
      labels:
        app: bootstrap
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: bootstrap
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - args:
            - -bootstrap=1
          image: 434394763103.dkr.ecr.eu-north-1.amazonaws.com/ubsv:cf3cc939b65e7e17a86a0ff3c8798d99b1ae45ae
          imagePullPolicy: IfNotPresent
          name: bootstrap
          ports:
            - containerPort: 8089
              protocol: TCP
            - containerPort: 8099
              protocol: TCP
            - containerPort: 9091
              protocol: TCP
            - containerPort: 4040
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 1Gi
      serviceAccountName: s3-push-service-account
