deploy/k8s/base/scaling-shared/bootstrap-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9091"
    prometheus.io/scrape: "true"
  labels:
    app: bootstrap
  name: bootstrap-service
  namespace: bootstrap-service
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: bootstrap
    port: 8089
    protocol: TCP
    targetPort: 8089
  - name: bootstrap-http
    port: 8099
    protocol: TCP
    targetPort: 8099
  - name: profiler
    port: 9091
    protocol: TCP
    targetPort: 9091
  - name: debugger
    port: 4040
    targetPort: 4040
    protocol: TCP
  selector:
    app: bootstrap
  sessionAffinity: None
  type: ClusterIP
