deploy/k8s/base/scaling-shared/coinbase-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coinbase-service
  namespace: coinbase-service
  labels:
    app: coinbase
  annotations:
    prometheus.io/port: "9091"
    prometheus.io/scrape: "true"
spec:
  clusterIP: None
  ipFamilyPolicy: SingleStack
  ipFamilies:
  - IPv4
  selector:
    app: coinbase
  ports:
    - name: tcp
      port: 8093
      targetPort: 8093
      protocol: TCP
    - name: profiler
      port: 9091
      targetPort: 9091
      protocol: TCP
