deploy/k8s/base/scaling-shared/bootstrap-grpc-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: bootstrap-ingressroute-grpc-8089
  namespace: bootstrap-service
spec:
  entryPoints:
    - bootstrap-grpc
  routes:
  - match: HostSNI(`bootstrap.scaling-miner.ubsv.dev`)
    services:
    - name: bootstrap-service
      port: 8089
  tls:
    passthrough: true
